--- a/Assignment11/index.html
+++ b/Assignment11/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignmet11</title>
+
+    <style>
+        .text{
+            color: blue;
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-    <h1>Index Page</h1>
+    <h1 style="color:tomato; background-color: yellow;">
+    HELLO WORLD</h1>
+    <h1 style="color:tomato; background-color: yellow;">
+    I am learning inline CSS</h1>
+    <h1 class="text">
+     PUNE
+    </h1>
+    <h1 class="text">MUMBAI</h1>
 </body>
 </html>
