Add Document level CSS

--- a/Assignment11/index.html
+++ b/Assignment11/index.html
@@ -7,8 +7,12 @@
 
     <style>
         .text{
-            color: blue;
+            color: black;
             background-color: yellow;
+        }
+
+        .bg-blue{
+            background-color: blue;
         }
     </style>
 </head>
@@ -21,5 +25,6 @@
      PUNE
     </h1>
     <h1 class="text">MUMBAI</h1>
+    <h1 class="text bg-blue">NASHIK</h1>
 </body>
 </html>
