--- a/Assignment11/index.html
+++ b/Assignment11/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignmet11</title>
 
     <style>
-        .text{
+        .text {
             color: black;
             background-color: yellow;
         }
 
-        .bg-blue{
+        .bg-blue {
             background-color: blue;
+        }
+
+        .bg-red{
+            background-color: red;
+        }
+
+        .bg-skyblue{
+            background-color: skyblue;
         }
     </style>
 </head>
+
 <body>
     <h1 style="color:tomato; background-color: yellow;">
-    HELLO WORLD</h1>
+        HELLO WORLD</h1>
     <h1 style="color:tomato; background-color: yellow;">
-    I am learning inline CSS</h1>
+        I am learning inline CSS</h1>
     <h1 class="text">
-     PUNE
+        PUNE
     </h1>
     <h1 class="text">MUMBAI</h1>
     <h1 class="text bg-blue">NASHIK</h1>
+
 </body>
+
 </html>
