update index page

--- a/Assignment11/index.html
+++ b/Assignment11/index.html
@@ -36,7 +36,11 @@
     </h1>
     <h1 class="text">MUMBAI</h1>
     <h1 class="text bg-blue">NASHIK</h1>
-
+    <p class="bg-red">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nulla. Id, similique?
+    </p>
+    <p class="bg-skyblue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo atque mollitia omnis asperiores!</p>
+    <a herf="about.html"target="_blank">Touch HERE</a>
 </body>
 
 </html>
