Add file style.css

--- a/Assignment11/index.html
+++ b/Assignment11/index.html
@@ -1,29 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignmet11</title>
-
-    <style>
-        .text {
-            color: black;
-            background-color: yellow;
-        }
-
-        .bg-blue {
-            background-color: blue;
-        }
-
-        .bg-red{
-            background-color: red;
-        }
-
-        .bg-skyblue{
-            background-color: skyblue;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -40,7 +20,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nulla. Id, similique?
     </p>
     <p class="bg-skyblue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo atque mollitia omnis asperiores!</p>
-    <a herf="about.html"target="_blank">Touch HERE</a>
+    <a href="about.html"target="_blank">Touch HERE</a>
 </body>
 
 </html>
