--- a/Assignment11/about.html
+++ b/Assignment11/about.html
@@ -4,28 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About page</title>
-    <style>
-        .text {
-            color: black;
-            background-color: yellow;
-        }
-
-        .bg-blue {
-            background-color: blue;
-        }
-
-        .bg-red{
-            background-color: red;
-        }
-
-        .bg-skyblue{
-            background-color: skyblue;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="">This is about page</h1>
-    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi non doloremque ipsa saepe in?
+    <h1 class="bg-skyblue">This is about page</h1>
+    <p class="bg-red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi non doloremque ipsa saepe in?
     </p>
+    <a href="index.html" target="_blank">Home</a>
 </body>
 </html>
