update index and about page

--- a/Assignment11/index.html
+++ b/Assignment11/index.html
@@ -8,14 +8,14 @@
 
 <body>
     <h1 style="color:tomato; background-color: yellow;">
-        HELLO WORLD</h1>
+        Internal CSS</h1>
     <h1 style="color:tomato; background-color: yellow;">
         I am learning inline CSS</h1>
     <h1 class="text">
         PUNE
     </h1>
     <h1 class="text">MUMBAI</h1>
-    <h1 class="text bg-blue">NASHIK</h1>
+    <h1 class="text bg-blue">Document level css</h1>
     <p class="bg-red">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nulla. Id, similique?
     </p>
