--- a/Assignment13/index.html
+++ b/Assignment13/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <div id="container">
-        <button class="btn1">log in</button>
-        <button class="btn2">sign up</button>
-        <button class="btn3"><img src="up-arrow.svg" alt=""></button>
+        <button class="btn1">sign up</button>
+        <button class="btn3">Touch me</button>
+        <button class="btn3">log in</button>
         <button class="btn4"><div></div>click for contact</button>
-        <button class="btn5">Upload here <img src="upload-file.svg" alt=""></button>
+        <button class="btn5">click here</button>
 
     </div>
 </body>
