--- a/Assignment13/index.html
+++ b/Assignment13/index.html
@@ -7,9 +7,9 @@
 <body>
     <div id="container">
         <button class="btn1">sign up</button>
-        <button class="btn3">Touch me</button>
+        <button class="btn2">Touch me</button>
         <button class="btn3">log in</button>
-        <button class="btn4"><div></div>click for contact</button>
+        <button class="btn4">click for contact</button>
         <button class="btn5">click here</button>
 
     </div>
