--- a/Assignment012/index.html
+++ b/Assignment012/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignmet12</title>
+    <title>Assignment 12</title>
+    <style>
+        .red-btn {
+            background-color: red;
+            height: 35px;
+            width: 130px;
+            border: 0.3px solid black;
+            font-size: 2.5vw;
+            border-radius: 25px;
+        }
+    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <h1 style="text-align: center;">BUTTONS</h1>
+    <div id="container">
+        <button
+            style="background-color: skyblue; height: 35px; width: 130px; border: 0.3px solid black; font-size: 2.5vw; border-radius: 25px;">Press</button>
+        <br>
+        <br>
+        <button class="red-btn">Press</button>
+        <br>
+        <br>
+        <button class="green-btn">Press</button>
+    </div>
 </body>
-</html>
