--- a/Assignment12/index.html
+++ b/Assignment12/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Assignmet11</title>
+    <title>Assignment 12</title>
+    <style>
+        .red-btn {
+            background-color: red;
+            height: 35px;
+            width: 130px;
+            border: 0.3px solid black;
+            font-size: 2.5vw;
+            border-radius: 25px;
+        }
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 style="color:tomato; background-color: yellow;">
-        Internal CSS</h1>
-    <h1 style="color:tomato; background-color: yellow;">
-        I am learning inline CSS</h1>
-    <h1 class="text">
-        PUNE
-    </h1>
-    <h1 class="text">MUMBAI</h1>
-    <h1 class="text bg-blue">Document level css</h1>
-    <p class="bg-red">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nulla. Id, similique?
-    </p>
-    <p class="bg-skyblue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo atque mollitia omnis asperiores!</p>
-    <a href="about.html"target="_blank">Touch HERE</a>
+    <h1 style="text-align: center;">BUTTONS</h1>
+    <div id="container">
+        <button
+            style="background-color: skyblue; height: 35px; width: 130px; border: 0.3px solid black; font-size: 2.5vw; border-radius: 25px;">Press</button>
+        <br>
+        <br>
+        <button class="red-btn">Press</button>
+        <br>
+        <br>
+        <button class="green-btn">Press</button>
+    </div>
 </body>
-
-</html>
