--- a/Assignment14/ass14.html
+++ b/Assignment14/ass14.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Design Example</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Styled Webpage</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+    </style>
 </head>
-
 <body>
-  <div class="container">
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple example demonstrating margin, padding, box-shadow, hover effect, and custom fonts.</p>
-  </div>
+    <div class="container" >
+        <div class="box">Box with Custom Font</div>
+        <button class="button">Button with Hover Effect</button>
+        <img class="image" src="example.webp" alt="Example Image">
+    </div>
 </body>
-
 </html>
