--- a/Assignment17/index.html
+++ b/Assignment17/index.html
@@ -7,23 +7,53 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="movie-card">
-            <img src="movie1.jpg" alt="Movie 1">
-            <h2>Movie 1</h2>
-            <p>Description of Movie 1</p>
-        </div>
-        <div class="movie-card">
-            <img src="movie2.jpg" alt="Movie 2">
-            <h2>Movie 2</h2>
-            <p>Description of Movie 2</p>
-        </div>
-        <div class="movie-card">
-            <img src="movie3.jpg" alt="Movie 3">
+        <div class="container">
+            <div class="movie-card">
+                <img src="heraferi.webp" alt="Movie 1">
+                <h2></h2>
+                <div class="rating">
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                </div>
+                <p><b>Phir Hera Pheri</b></p>
+                <p>Length&nbsp;&nbsp;&nbsp;Lang&nbsp;&nbsp;&nbsp;Rating&nbsp;&nbsp;&nbsp;Review</p>
+                <p><b>01.37&nbsp&nbsp;&nbsp;&nbsp;&nbsp;Hindi&nbsp;&nbsp;&nbsp;&nbsp;5.0&nbsp;&nbsp;&nbsp;&nbsp;50+</b></p>
+            </div>
+
+            <div class="movie-card">
+                <img src="lucky.webp" alt="Movie 2">
+                <h2>Movie 2</h2>
+                <div class="rating">
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                </div>
+            <p><b>Oye Lucky Lucky Oye</b></p>
+            <p>Length&nbsp;&nbsp;&nbsp;Lang&nbsp;&nbsp;&nbsp;Rating&nbsp;&nbsp;&nbsp;Review</p>
+            <p><b>01.37&nbsp&nbsp;&nbsp;&nbsp;&nbsp;Hindi&nbsp;&nbsp;&nbsp;&nbsp;5.0&nbsp;&nbsp;&nbsp;&nbsp;50+</b></p>
+           </div>
+
+
+           <div class="movie-card">
+            <img src="welcome.webp" alt="Movie 3">
             <h2>Movie 3</h2>
-            <p>Description of Movie 3</p>
+            <div class="rating">
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+            </div>
+            <p><b>Welcome</b></p>
+            <p>Length&nbsp;&nbsp;&nbsp;Lang&nbsp;&nbsp;&nbsp;Rating&nbsp;&nbsp;&nbsp;Review</p>
+            <p><b>01.37&nbsp&nbsp;&nbsp;&nbsp;&nbsp;Hindi&nbsp;&nbsp;&nbsp;&nbsp;5.0&nbsp;&nbsp;&nbsp;&nbsp;50+</b></p>
+          </div>
         </div>
-        <!-- Add more movie cards as needed -->
-    </div>
+
 </body>
 </html>
