Add some Changes

--- a/Assignment16/index.html
+++ b/Assignment16/index.html
@@ -3,29 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe Website</title>
     <link rel="stylesheet" href="style.css">
+    <title>Hot-Cafe</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Our Cafe</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="content">
-            <h2>Specials of the Day</h2>
-            <p>Today's special dishes...</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Cafe Website. All rights reserved.</p>
-    </footer>
+  <div id="cover">
+    <img src="coffee.webp" alt="">
+  </div>
+     <nav>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Menu</li>
+            <li>Gallery</li>
+            <li>Blog</li>
+            <li>Shop</li>
+            <li>Contact</li>
+            <li><img src="./images/search.svg" alt="" height="20px"></li>
+          </ul>
+     </nav>
+  
+     <div id="cofee-div">
+          <h4>Joe's best coffee in town</h4>
+          <img src="./images/coffee-mug.png" alt="">
+     </div>
+  <div id="time">
+     <h3>Opening Hour</h3>
+     <h5>mon-sat 7Am-12pm</h5>
+  </div>
+
+  <div id="book">
+    <h3>Book table</h3>
+    <h5>call us +91 1234567890</h5>
+ </div>
 </body>
 </html>
