--- a/Assignment22/index.html
+++ b/Assignment22/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ASSIGNMENT OPERATORS</title>
+  <title>Assignment Operations</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
 
     let x = 20;
-    x %= 4;
+    x%= 4;
     console.log(`20%4=${x}`);
 
 
